--- a/src/responsividade.css
+++ b/src/responsividade.css
@@ -3,8 +3,8 @@
 /* Pequenos dispositivos (telefones, 600px e abaixo) */
 @media only screen and (max-width: 400px) {
   .body {
-      padding: 0 auto; /* Adiciona um espaçamento nas laterais do body */
-      font-size: 7px; /* Ajusta o tamanho da fonte */
+      padding: 0 auto;
+      font-size: 3px;
   }
 
   .fundo-geral {
@@ -18,6 +18,15 @@
 
   .menu a {
     font-size: 12px;
+  }
+
+  .central {
+    width: 70%;
+  }
+
+  .central > .nome, .sobrenome {
+    font-family: 'Dancing Script';
+    background-color: rgba(255,255,255, 0.300);
   }
 
   .titulo-section {
@@ -44,7 +53,7 @@
   }
 
   .inicio {
-    scroll-margin-top: 200px;
+    /* scroll-margin-top: 100px; */
   }
 
   .sobre, .dicas, .contato {
@@ -109,6 +118,7 @@
 
   .icones > div {
     margin: 0 30px 6px 30px ;
+    padding: .250em;
   }
 
   .icones > .titulo-section {
@@ -138,8 +148,8 @@
 /* Médios dispositivos (tablets, 768px e abaixo) */
 @media only screen and (max-width: 768px) {
   .body {
-    padding: 0 auto; /* Adiciona um espaçamento nas laterais do body */
-    font-size: 7px; /* Ajusta o tamanho da fonte */
+    padding: 0 auto; */
+    font-size: 7px;
 }
 
 .fundo-geral {
@@ -151,20 +161,25 @@
   flex-direction: column;
 }
 
-/* .menu a {
-  font-size: .5em;
-} */
+.central {
+  width: 70%;
+}
+
+.central > .nome, .sobrenome {
+  font-family: 'Dancing Script';
+  background-color: rgba(255,255,255, 0.300);
+}
 
 .titulo-section {
   margin-top: .1em ;
-  color:#e3bec5 ;
+  color:#283040 ;
   font-size: 1.3em; 
 }
 
 .sub-titulo-section {
   margin-bottom: .1em;
-  color:#e3bec5 ;
-  text-decoration-color: #e3bec5 ;
+  color:#283040 ;
+  text-decoration-color: #283040 ;
   font-size: 1em;
 }
 
@@ -179,7 +194,7 @@
 }
 
 .inicio {
-  margin-top: 160px;
+  margin-top: 70px;
 }
 
 .inicio, .sobre, .dicas, .contato {
@@ -219,7 +234,7 @@
 }
 
 .fundo-retangulo-sobre > p {
-  font-size: .9em;
+  font-size: .7em;
 }
 
 .contato {
@@ -248,6 +263,7 @@
 
 .icones > div {
   margin: 0 60px 12px 60px ;
+  font-size: .75em;
 }
 
 .icones > .titulo-section {
@@ -255,8 +271,9 @@
 }
 
 .endereco {
-  margin: 0 1em;
-  padding: 0.5em;
+  display: block;
+  margin: .5em auto;
+  width: 80%;
 }
 
 .endereco > .titulo-section {
@@ -266,6 +283,18 @@
 .logo {
   width: 150px;
   margin: 1.5em 0;
+}
+
+.entre-em-contato {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1em 0 0 0 ;
+}
+
+.botao-contato {
+  font-size: 1em;
+  font-weight: bold;
 }
 }
 
