--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,23 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css";
-
+@font-face {
+  font-family: 'cherolina';
+  src: url(./fontes/Cherolina.ttf);
+}
 html {
   scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
+  background-color: #c385f5;
 }
 
-body {
+/* body {
   width: 100%;
   padding: 0;
   margin: 0 auto;
   background-color: #283040;
-  background-image: linear-gradient(to bottom, #283040 10%, #e3bec5 50%, #283040 100%);
-  font-family: 'Handlee', sans-serif;
-  overflow-x: hidden; /* Evita a barra de rolagem horizontal */
-}
+  background-image: linear-gradient(to bottom,#e3bec5 1%, #283040 30%, #e3bec5 120%);  font-family: 'Handlee', sans-serif;
+  overflow-x: hidden; /* Evita a barra de rolagem horizontal
+} */
 
 header {
   height: 100%;
@@ -21,10 +26,10 @@ header {
           /* INICIO */
 
 .fundo-geral {
-  margin-top: 4em;
-  margin-left: 3em;
-  margin-right: 3em;
-  background-image: linear-gradient(to bottom,#e3bec5 10%, #283040 50%, #e3bec5 100%);
+  /* margin-top: 4em; */
+  /* margin-left: 3em;
+  margin-right: 3em; */
+  background-image: linear-gradient(to bottom,#e3bec5 1%, #283040 30%, #e3bec5 120%);
   position: relative;
 }
 
@@ -87,8 +92,7 @@ a:hover {
 }
 
 .inicio {
-  background-image: url(./img/monise-background1.png);
-  /* background-color: rgba(40, 48, 64, 0.400); */
+  background-image: url(./img/corona-test.jpg);
   scroll-margin-top: 80px;
   background-repeat: no-repeat; 
   background-position: center;
@@ -99,10 +103,7 @@ a:hover {
   text-align: center;
   padding-top: 0;
   height: 100vh;
-  margin: 0 100px;
-  border-bottom: 3px solid #F4F4F9;
-  /* border: 3px  solid #F4F4F9; */
-  border-radius: 10px;
+  border-bottom: 3px dotted  #F4F4F9;
 }
 
 .inicio h3 {
@@ -111,26 +112,40 @@ a:hover {
 
 .central {
   display: block;
-  margin-top: 100px;
+  margin-top: 200px;
+  width: 30%;
 }
 
 .central > h2, h3, h4 {
-  padding: 5px;
+  padding: 1px;
   margin-bottom: 0;
   color: #283040;
-  background-color: rgba(227, 190, 197, 0.400);
   border-radius: 15px;
+  margin: 10px;
 }
 
-.central > h3, h4 {
-  font-weight: bolder;
+.central > .nome, .sobrenome {
+  display: inline-block;
+  max-width: 300px;
+  width: 100%;
+  font-family: 'Dancing Script';
+  background-color: rgba(255, 255, 255, 0.300);
+}
+
+.central > h3 {
+  line-height: 1;
+  font-size: 1.750em;
 }
 
 .central > h4 {
-  font-size: larger;
+  line-height: 1;
+  font-size: 1.5em;
+  margin: 0;
 }
 
-.foto-inicial {
+
+
+/* .foto-inicial {
   width: 70px;
   height: 70px;
   border-radius: 300px;
@@ -142,23 +157,47 @@ a:hover {
 .foto-inicial:hover {
   border: 5px solid #283040;
   transform: scale(1.02);
-}
+} */
 
 .nome {
   font-weight: 600;
-  font-size: 2.3em;
+  font-size: 2.5em;
   color: #283040;
-  margin: 0;
-  text-decoration: underline;
+  /* text-decoration: underline; */
   font-family: 'Handlee', sans-serif;
 }
 
 .sobrenome {
-  margin: 0;
   color: #283040;
-  font-size: 1.5em;
-  font-weight: 400;
+  font-size: 2.5em;
   font-family: 'Handlee', sans-serif;
+}
+
+.entre-em-contato {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3em 0 0 0;
+}
+
+.botao-contato {
+  font-family: 'Handlee';
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1.5em;
+  background-color: #e3bec5;
+  color: #283040;
+  border-radius: 1em;
+  padding: 1em;
+  text-transform: uppercase;
+  transition: background-color 1s ease;
+}
+
+.botao-contato:hover {
+  text-decoration: none;
+  color: #e3bec5;
+  background-color: #283040;
+  font-weight: 700;
 }
 
 
@@ -166,7 +205,7 @@ a:hover {
 
 
 .sobre {
-  scroll-margin-top: 80px;
+  scroll-margin-top: 70px;
   text-align: center;
   margin: 0 5em 0 5em;
   padding-top: 0.5em;
@@ -202,6 +241,8 @@ a:hover {
   font-weight: 600;
 }
 
+
+
 .fundo-retangulo-sobre {
   text-align: center;
   height: auto;
@@ -218,7 +259,7 @@ a:hover {
           /* DICAS */
 
 .dicas {
-  scroll-margin-top: 80px;
+  scroll-margin-top: 50px;
   height: auto;
   margin: 0 5em 0 5em;
   padding-top: 0.5em;
@@ -341,7 +382,7 @@ a:hover {
 
 .contato {
   display: grid;
-  scroll-margin-top: 80px;
+  scroll-margin-top: 60px;
   height: 100%;
   margin: 0 5em 0 5em;
   background-color: rgba(217, 217, 217, 0.1);
@@ -488,7 +529,7 @@ a:hover {
 }
 
 .rodape {
-  border-top: 3px  solid #F4F4F9;
+  border-top: 3px dotted  #F4F4F9;
   padding-top: 2em;
   padding-bottom: 2em;
   text-align: center;
