--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@ a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 60%;
+  width: 90%;
 }
 
 .central > h2, h3, h4 {
@@ -427,13 +427,27 @@ a:hover {
 }
 
 .icones div {
-  margin-bottom:0;
   background-color:  rgba(227, 191, 197, 0.5) ;
   margin: 20px 50px 0 50px;
   border-radius: .75em;
   padding: 1em;
   width: 60%;
+  align-content: center;
+  position: relative;
 }
+
+.icone-contato {
+  padding: 0;
+  margin: 0;
+  width: 22px;
+  height: auto;
+  position: absolute;
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  left: 5%;
+}
+
 
 .icones a {
   text-decoration: none;
