--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ header {
   font-size: 1.5em;
   transition: .8s;
   color: #283040;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
 }
 
 a:hover {
@@ -122,7 +122,7 @@ a:hover {
   color: #283040;
   line-height: 1;
   font-size: 1.800em;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
 }
 
 .central > h4 {
@@ -131,7 +131,7 @@ a:hover {
   line-height: 1;
   font-size: 1.800em;
   margin: 0;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
 }
 
 .nome {
@@ -160,7 +160,7 @@ a:hover {
 }
 
 .botao-contato {
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
   display: inline-block;
   text-decoration: none;
   text-decoration-color: none;
@@ -202,7 +202,7 @@ a:hover {
   text-align: center;
   color: #fff;
   margin-top: 1em;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
   font-weight: 600;
 }
 
@@ -214,7 +214,7 @@ a:hover {
   color: #fff;
   text-decoration: underline;
   text-decoration-color: #fff;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
   font-weight: 600;
 }
 
@@ -227,8 +227,8 @@ a:hover {
   border-radius: 1.5em;
   color: #283040;
   font-size: 1.5em;
-  font-weight: 600 ;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  /* font-weight: 600 ; */
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
 }
 
 .fundo-retangulo-sobre p {
@@ -260,8 +260,8 @@ a:hover {
   text-align: center;
   color: #fff;
   margin-top: 1em;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
-  font-weight: 600;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
+  /* font-weight: 600; */
 }
 
 .sub-titulo-section-dicas {
@@ -272,8 +272,8 @@ a:hover {
   color: #fff;
   text-decoration: underline;
   text-decoration-color: #fff;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
-  font-weight: 600;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
+  /* font-weight: 600; */
 }
 
 
@@ -292,7 +292,7 @@ a:hover {
   text-align: center;
   border-radius: .5em;
   transform: rotate(-3deg);
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
   border-top-left-radius: 3em;
   border-bottom-right-radius: 3em;
   height: auto;
@@ -304,7 +304,7 @@ a:hover {
   text-align: center;
   border-radius: .5em;
   transform: rotate(3deg);
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
   border-top-left-radius: 3em;
   border-bottom-right-radius: 3em;
   height: auto;
@@ -353,7 +353,7 @@ a:hover {
 .grid-container p {
   color: #283040;
   font-size: 17px;
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 .cards:hover, .cards1:hover {
@@ -471,7 +471,7 @@ a:hover {
   color: #283040;
   margin-top: 0;
   margin-bottom: 1em;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
 }
 
 .endereco {
@@ -496,7 +496,7 @@ a:hover {
   color: #283040;
   margin-top: 0;
   margin-bottom: 1em;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
 }
 
 .endereco > .mapa {
@@ -509,14 +509,14 @@ a:hover {
 .endereco p a {
   color: inherit;
   text-decoration: underline;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
 }
 
 .endereco p {
     margin-top: 1em;
     text-align: center;
     color: #283040;
-    font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+    font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
 
@@ -538,7 +538,7 @@ a:hover {
   padding-bottom: 2em;
   text-align: center;
   color: #283040;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
   font-size: 1em;
 }
 
@@ -577,10 +577,10 @@ a:hover {
 .rodape a {
   text-decoration: underline;
   color: inherit;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
 }
 
 .rodape p:nth-child(5) {
   font-size: .9em;
-  font-family: 'Nanum Myeongjo', 'montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Arsenal', 'montserrat', Arial, Helvetica, sans-serif;
 }
